# fb-marketplace-sniper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ui.py
backend/: celery_app.py  config.py  db.py  main.py  models.py  notifier.py  pricer.py  relevance.py  scraper_ebay.py  scraper_fb.py  scraper_prices.py  tasks.py
backend/routers/: listings.py  prices.py  scans.py  watchlist.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: Layout.tsx  ListingsTable.tsx  ScanStatus.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx  Listings.tsx  Watchlist.tsx
tests/: test_api.py  test_db.py  test_models.py  test_pricer.py  test_relevance.py  test_tasks.py
