[project]
name = "fb-marketplace-sniper"
version = "0.1.0"
description = "Facebook Marketplace deal sniper — find underpriced listings automatically"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.45.0",
    "playwright-stealth>=1.0.6",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "curl-cffi>=0.7.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
